Add v1.2 multi-button call routing
